--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
+$title-font: "Dancing Script";
 $body-font-family: 'Varela Round';
 $font-size-root: 18px !default;
